--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weighbridge Software - A4 Print Fixed</title>
+    <title>Weighbridge Software - Final Print</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
@@ -27,28 +27,36 @@
             page-break-inside: avoid;
         }
 
-        /* --- FINAL PRINT STYLES --- */
+        /* --- FINAL & MORE ROBUST PRINT STYLES --- */
         @page {
             size: A4;
             margin: 10mm; 
         }
 
         @media print {
+            body {
+                margin: 0;
+            }
             body * { visibility: hidden; }
             #slip-preview-container, #slip-preview-container * { 
                 visibility: visible; 
             }
             #slip-preview-container {
-                position: static;
+                position: absolute;
+                left: 0;
+                top: 0;
                 width: 100%;
-                height: auto;
+                height: 100%; /* Fill the entire printable area */
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between; /* This is the key: pushes slips to top and bottom */
                 padding: 0;
                 margin: 0;
                 border: none !important;
                 box-shadow: none !important;
             }
             .single-slip {
-                height: 135mm; /* A4 height is 297mm. Half is ~148.5mm. This gives safe margin. */
+                height: 48%; /* Each slip takes up just under half the page height */
                 width: 100%;
                 border: 1px solid #000;
                 padding: 15px;
@@ -57,9 +65,6 @@
                 page-break-inside: avoid; 
                 display: flex;
                 flex-direction: column;
-            }
-            .single-slip:first-child {
-                 margin-bottom: 5mm; /* Gap between the two slips */
             }
             .no-print { display: none !important; }
         }
@@ -144,8 +149,8 @@
         function setFormMode(mode, slipId = null) { if (mode === 'edit') { editingSlipIdInput.value = slipId; saveUpdateBtn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg> Update Slip`; saveUpdateBtn.classList.replace('bg-blue-600', 'bg-green-600'); saveUpdateBtn.classList.replace('hover:bg-blue-700', 'hover:bg-green-700'); formModeIndicator.classList.remove('hidden'); } else { editingSlipIdInput.value = ''; saveUpdateBtn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path><polyline points="17 21 17 13 7 13 7 21"></polyline><polyline points="7 3 7 8 15 8"></polyline></svg> Save & Print Slip`; saveUpdateBtn.classList.replace('bg-green-600', 'bg-blue-600'); saveUpdateBtn.classList.replace('hover:bg-green-700', 'hover:bg-blue-700'); formModeIndicator.classList.add('hidden'); } }
         function populateForm(data) { formInputs.forEach(input => { if (data[input.id] !== undefined) { input.value = data[input.id]; } }); updatePreviewFromForm(); setFormMode('edit', data.id); }
         function clearFormForNewSlip() { form.reset(); document.getElementById('company-name').value = "ASHAPURA ENTERPRISE"; document.getElementById('weighbridge-name').value = "Main Yard, Rajkot"; document.getElementById('serial-no').value = Math.floor(10000 + Math.random() * 90000); const now = new Date(); document.getElementById('in-date').value = now.toISOString().split('T')[0]; document.getElementById('in-time').value = now.toTimeString().split(' ')[0].substring(0, 5); updatePreviewFromForm(); setFormMode('new'); }
-        async function saveSlip() { if (!slipsCollectionRef) { showToast("Not logged in.", true); return false; } const vehicleNumber = document.getElementById('vehicle-number').value; if (!vehicleNumber.trim()) { showToast("Vehicle Number is required to save.", true); return false; } const slipData = {}; formInputs.forEach(input => slipData[input.id] = input.value); slipData.createdAt = firebase.firestore.FieldValue.serverTimestamp(); try { await slipsCollectionRef.add(slipData); showToast("Slip saved successfully!"); return true; } catch (error) { console.error("Error adding document: ", error); showToast("Error saving slip.", true); return false; } }
-        async function updateSlip(slipId) { const slipData = {}; formInputs.forEach(input => slipData[input.id] = input.value); slipData.updatedAt = firebase.firestore.FieldValue.serverTimestamp(); try { await slipsCollectionRef.doc(slipId).update(slipData); showToast("Slip updated successfully!"); clearFormForNewSlip(); return true; } catch (error) { console.error("Error updating document: ", error); showToast("Error updating slip.", true); return false; } }
+        async function saveSlip() { if (!slipsCollectionRef) { showToast("Not logged in.", true); return false; } const vehicleNumber = document.getElementById('vehicle-number').value; if (!vehicleNumber.trim()) { showToast("Vehicle Number is required to save.", true); return false; } const slipData = {}; formInputs.forEach(input => slipData[input.id] = input.value); slipData.createdAt = firebase.firestore.FieldValue.serverTimestamp(); try { const docRef = await slipsCollectionRef.add(slipData); populateForm({id: docRef.id, ...slipData}); showToast("Slip saved successfully!"); return true; } catch (error) { console.error("Error adding document: ", error); showToast("Error saving slip.", true); return false; } }
+        async function updateSlip(slipId) { const slipData = {}; formInputs.forEach(input => slipData[input.id] = input.value); slipData.updatedAt = firebase.firestore.FieldValue.serverTimestamp(); try { await slipsCollectionRef.doc(slipId).update(slipData); showToast("Slip updated successfully!"); return true; } catch (error) { console.error("Error updating document: ", error); showToast("Error updating slip.", true); return false; } }
         function fetchAndRenderSlips() { if (!slipsCollectionRef) return; slipsCollectionRef.orderBy("createdAt", "desc").onSnapshot((querySnapshot) => { const listElement = document.getElementById('saved-slips-list'); listElement.innerHTML = ''; allSlipsData = []; if (querySnapshot.empty) { listElement.innerHTML = '<p class="text-center text-slate-500 p-4">You have no saved slips yet.</p>'; return; } querySnapshot.forEach((doc) => { const slip = { id: doc.id, ...doc.data() }; allSlipsData.push(slip); const slipCard = `<div class="grid grid-cols-1 md:grid-cols-5 gap-4 items-center p-3 bg-slate-50 rounded-lg border"><div class="font-semibold text-slate-800">#${slip['serial-no'] || 'N/A'}</div><div class="text-slate-600 col-span-1">${slip['customer-name'] || 'No Customer'}</div><div class="text-slate-600 uppercase col-span-1">${slip['vehicle-number'] || 'No Vehicle'}</div><div class="flex items-center gap-2 justify-end col-span-1 md:col-span-2"><button data-id="${slip.id}" class="load-btn text-sm bg-green-100 text-green-800 font-semibold px-3 py-1 rounded-md hover:bg-green-200">Load</button><button data-id="${slip.id}" class="view-print-btn text-sm bg-blue-100 text-blue-800 font-semibold px-3 py-1 rounded-md hover:bg-blue-200">View/Print</button><button data-id="${slip.id}" class="delete-btn text-sm bg-red-100 text-red-800 font-semibold px-3 py-1 rounded-md hover:bg-red-200">Delete</button></div></div>`; listElement.insertAdjacentHTML('beforeend', slipCard); }); }, (error) => { console.error("Error fetching slips: ", error); document.getElementById('slips-message').textContent = 'Error fetching data. Check Firebase rules.'; }); }
         function showDeleteConfirmation(slipId) { deleteModal.classList.add('show'); confirmDeleteBtn.dataset.slipId = slipId; }
         function hideDeleteConfirmation() { deleteModal.classList.remove('show'); confirmDeleteBtn.dataset.slipId = ''; }
@@ -164,5 +169,4 @@
     </script>
 </body>
 </html>
-
 
