--- a/index.html
+++ b/index.html
@@ -27,46 +27,43 @@
             page-break-inside: avoid;
         }
 
-        /* --- GUARANTEED A4 PRINT STYLES --- */
+        /* --- FINAL & DEFINITIVE A4 PRINT STYLES --- */
         @page {
             size: A4;
-            margin: 10mm; /* Standard margin for A4 printing */
+            margin: 10mm; 
         }
 
         @media print {
             body {
                 margin: 0;
-                -webkit-print-color-adjust: exact; /* Helps in printing background colors if any */
+                -webkit-print-color-adjust: exact;
             }
             body * { visibility: hidden; }
             #slip-preview-container, #slip-preview-container * { 
                 visibility: visible; 
             }
             #slip-preview-container {
-                position: absolute;
-                left: 0;
-                top: 0;
+                position: static; /* Let it flow in the page defined by @page */
                 width: 100%;
-                height: 100%;
-                font-size: 10pt; /* Reducing font size slightly for a better fit */
-                padding: 0;
-                margin: 0;
+                height: 277mm; /* Printable area height: 297mm (A4) - 20mm (margins) */
+                font-size: 10pt;
                 border: none !important;
                 box-shadow: none !important;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
             }
             .single-slip {
-                height: 138mm; /* A4 height is 297mm. Printable area is ~277mm. 138mm x 2 fits perfectly. */
+                height: 135mm; /* Fixed height for each slip */
                 width: 100%;
                 border: 1px solid #000;
-                padding: 10px; /* Reduced padding for more content space */
+                padding: 10px;
                 box-sizing: border-box;
                 overflow: hidden; 
                 page-break-inside: avoid; 
                 display: flex;
                 flex-direction: column;
-            }
-            .single-slip:first-child {
-                margin-bottom: 1mm; /* Minimal gap between slips */
             }
             .no-print { display: none !important; }
         }
